# fractal-explorer

./: Cargo.toml  README.md  ]  example.txt  index.html  shell.nix  styles.css  vercel.json
.direnv/: nix-profile-25.05-khbvilmsrv4l69nw  nix-profile-25.05-khbvilmsrv4l69nw.rc
src/: cell.rs  gpu.rs  main.rs  main.rs.bak  main.rs~  mandelbrot.wgsl
