[package]
name = "braille_art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
rand = "0.8"
wasm-logger = "0.2"
gloo = {version = "0.11" }
yew = {version = "0.21.0", features = ["csr"]}
num-complex = "0.4.6"
rayon = "1.10.0"
