[package]
name = "fractal-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = {version = "0.21.0", features = ["csr"]}
num-complex = "0.4.6"
wgpu = {version = "23.0.1" }
wasm-bindgen = "0.2.99"
bytemuck = {version = "1.21.0", features = ["derive"]}
wasm-bindgen-futures = "0.4.49"
console_error_panic_hook = "0.1.7"

[profile.release]
debug=true
opt-level = 3
