[package]
name = "fractal-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"
yew = {version = "0.21.0", features = ["csr"]}
num-complex = "0.4.6"
rayon = "1.10.0"
wgpu = "23.0.1"
wasm-bindgen = "0.2.99"
web-sys = "0.3.76"

[profile.release]
debug=true
opt-level = 3
